<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="TypographyDashes">
    
    <!-- Wizard -->
    <string name="welcome">Welcome!</string>
    <string name="wizard_text">Before getting started, I need to know how to reach your server.</string>
    <string name="test">Test connection</string>
    <string name="done">Close</string>
    
    <string name="wizard_success">Looks good!</string>
    <string name="wizard_error_mount_point">The server did not send a valid reply. Please validate the mount point of the API.</string>
    <string name="wizard_error_connection">Could not connect to the server. Please make sure that the address and/or the port are set correctly and the server is running.</string>
    <string name="wizard_error_password">The password you entered is incorrect.</string>
    <string name="wizard_error_ssl">Failed to establish a secure connection to your server. Please make sure you imported the certificate used to sign the server key on this device. See <a href="http://muckebox.org/ssl.html">http://muckebox.org/ssl.html</a> for details.</string>

	<!-- Titles -->
    <string name="app_name">Muckebox</string>
    <string name="action_settings">Settings</string>
    <string name="download_list_title">Downloads</string>
    <string name="title_artists">Artists</string>
    <string name="title_albums">Albums</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_latest">Recently Added</string>
    
    <string name="refresh">Refresh</string>
    
    <string name="empty">Empty.</string>
    <string name="icon">Icon</string>
    
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    
    <string name="drawer_browse_header">Browse</string>
    <string name="drawer_other_header">Other</string>
    
    <!-- SETTINGS -->
    
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_downloads">Downloads</string>
    
    <string name="server_settings_title">Server</string>
    <string name="server_address_setting_title">Server</string>
    <string name="server_address_setting_summary">Hostname or IP of your server</string>
    <string name="server_password_setting_title">Password</string>
    <string name="server_password_setting_summary">The password you set on the server</string>
    <string name="server_port_setting_title">Port</string>
    <string name="server_port_setting_summary">Port your server is listening on</string>
    <string name="server_ssl_enable_setting_title">Enable SSL</string>
    <string name="server_ssl_enable_setting_summary">Encrypt all network communication</string>
    <string name="transcoding_settings_title">Transcoding</string>
    <string name="transcoding_enable_setting_title">Enable</string>
    <string name="transcoding_enable_setting_summary">Transcode music on the server</string>
    <string name="transcoding_format_setting_title">Format</string>
    <string name="transcoding_format_setting_summary">Transcode to this format</string>
    <string name="transcoding_format_setting_dialog_title">Choose transcoding format</string>

    <string-array name="transcoding_format_setting_entries">
        <item>Ogg Vorbis</item>
        <item>Opus</item>
        <item>MP3</item>
    </string-array>
    <string-array name="transcoding_format_setting_values">
        <item>ogg</item>
        <item>opus</item>
        <item>mp3</item>
    </string-array>

    <string name="transcoding_format_setting_default">ogg</string>
    <string name="transcoding_quality_setting_title">Quality</string>
    <string name="transcoding_quality_setting_summary">This determines audio quality and network bandwidth</string>
    <string name="transcoding_quality_setting_dialog_title">Choose transcoding quality</string>

    <string-array name="transcoding_quality_setting_entries">
        <item>Highest</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
        <item>Lowest</item>
    </string-array>
    <string-array name="transcoding_quality_setting_values">
        <item>highest</item>
        <item>high</item>
        <item>medium</item>
        <item>low</item>
        <item>lowest</item>
    </string-array>

    <string name="transcoding_quality_setting_default">high</string>
    <string name="caching_settings_title">Caching</string>
    <string name="caching_enable_setting_title">Enable</string>
    <string name="caching_enable_setting_summary">Cache streamed music on the device</string>
    <string name="cache_size_setting_title">Cache Size</string>
    <string name="cache_size_setting_summary">Maximum size in MB</string>

    <!-- ERRORS -->

    <string name="error_reload_artists">An error occurred while refreshing the artist list.</string>
    <string name="error_json">An error occurred while parsing the JSON response.</string>
    <string name="error_reload_albums">An error occurred while refreshing the album list.</string>
    <string name="error_reload_tracks">An error occurred while refreshing the track list.</string>
    <string name="error_download">An error occurred while downloading a track.</string>
    <string name="error_ssl">An error occurred while establishing an SSL connection. Please make sure you imported your CA on this device.</string>
    <string name="error_authentication">Authentication failed, please check your password.</string>
    
    <string name="error_playback">An error occurred during playback. (%1$d / %2$d)</string>
    
    <string name="error_audiofocus">Could not get audio focus. Make sure there is no other player running.</string>
    <string name="error_local_playback">There was an error playing from local storage. I removed the faulty file from storage.</string>
    
    <!--  TITLES -->
    <string name="title_activity_artist_album_browse_activiy">Albums</string>
    <string name="title_activity_track_browse_activiy">Tracks</string>
    
    <!-- BUTTONS -->
    <string name="play">Play</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="paused">Paused</string>
   	<string name="previous">Previous</string>
   	<string name="next">Next</string>
   	<string name="stop">Stop</string>
    <string name="download">Download</string>
    <string name="collapse">Collapse</string>
    <string name="expand">Expand</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="pin_to_device">Pin to device</string>
    <string name="unpin_from_device">Unpin from device</string>
    <string name="discard">Discard</string>
    
    <string name="pin_all">Pin all</string>
    <string name="unpin_all">Unpin all</string>
    
    <string name="status_downloading">Downloading&#8230;</string>
    <string name="status_queued">Queued</string>
    <string name="status_buffering">Buffering&#8230;</string>
    
    <string name="download_started">Download started</string>
    
    <string name="download_failed">Download failed, check your network connection.</string>
    <string name="download_failed_short">Download failed!</string>
    <string name="download_canceled">Download canceled.</string>
    <string name="download_finished">Download finished.</string>
    
    <string name="play_status">Play status</string>
    <string name="download_status">Download status</string>
    <string name="cache_status">Cache status</string>
    
    <string name="search">Search</string>
    
    <string name="null_null">-:--</string>
    <string name="no_track">No track loaded</string>
    
    <string name="user_agent">Muckebox</string>
</resources>
