<?xml version="1.0" encoding="utf-8"?>

 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:orientation="vertical"
       	android:divider="@android:drawable/divider_horizontal_bright"
		android:dividerPadding="4dip"
		android:showDividers="middle"
		android:animateLayoutChanges="true"
		android:background="@android:color/background_light" >
        
	<RelativeLayout 
	    style="@style/ListItem" >
	
	    <TextView
	        android:id="@+id/track_list_title"
			style="@style/ListItemPrimaryText"/>
	 
	    <TextView
	        android:id="@+id/track_list_artist"
	        android:layout_below="@id/track_list_title"
	        style="@style/ListItemSecondaryText" />
	    
	    <TextView
	        android:id="@+id/track_list_duration"
	        android:layout_alignParentRight="true"
	        android:layout_alignTop="@id/track_list_title"
	        style="@style/ListItemPlaytime" />
	    
	</RelativeLayout>


	<LinearLayout
   	    android:id="@+id/track_list_buttons"
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:paddingLeft="15sp"
   	    android:background="#ff222222"
		android:visibility="gone">
	    
	   	<LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:divider="@android:drawable/divider_horizontal_bright"
			android:dividerPadding="4dip"
			android:showDividers="middle|end|beginning"
			android:background="@android:color/background_light">
	        
	        <ImageView 
	            android:src="@drawable/av_play"
	            android:contentDescription="@string/play"
	            style="@style/TrackListButton" />
	        
	        <ImageView
	            android:src="@drawable/av_add_to_queue"
	            android:contentDescription="@string/add_to_queue"
	            style="@style/TrackListButton" />
	        
	        <ImageView
	            android:src="@drawable/av_download"
	            android:contentDescription="@string/download"
	            style="@style/TrackListButton" />
	        
	    </LinearLayout>
	    
   	</LinearLayout>
    
</LinearLayout>

